--- a/app/src/main/res/layout/activity_create_issue.xml
+++ b/app/src/main/res/layout/activity_create_issue.xml
@@ -8,7 +8,7 @@
     tools:context=".CreateIssueActivity">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/create_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -16,10 +16,10 @@
         android:text="主旨"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/issue_create" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/issue_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/et_purpose"
+        android:id="@+id/et_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -41,10 +41,10 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/create_name" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/create_summary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -52,10 +52,10 @@
         android:text="概述"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_purpose" />
+        app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
     <EditText
-        android:id="@+id/et_overview"
+        android:id="@+id/et_summary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -65,10 +65,10 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/create_summary" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/create_start_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -76,10 +76,10 @@
         android:text="開始時間"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_overview" />
+        app:layout_constraintTop_toBottomOf="@+id/et_summary" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/create_end_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -90,7 +90,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_start_time" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/create_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -111,10 +111,10 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/create_status" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/create_designee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -135,29 +135,33 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintTop_toBottomOf="@+id/create_designee" />
 
     <ImageButton
-        android:id="@+id/btn_home"
+        android:id="@+id/cr_btn_back"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="48dp"
+        android:background="@drawable/btn_back_shape"
+        android:elevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_save"
+        app:layout_constraintEnd_toStartOf="@+id/cr_btn_save"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_designee"
-        app:srcCompat="@drawable/home" />
+        app:srcCompat="@drawable/back" />
 
     <ImageButton
-        android:id="@+id/btn_save"
+        android:id="@+id/cr_btn_save"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="48dp"
-        android:background="#8BFF91"
+        android:background="@drawable/btn_save_shape"
+        android:elevation="4dp"
+        android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -175,7 +179,7 @@
         android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/create_end_time" />
 
     <EditText
         android:id="@+id/et_start_time"
@@ -188,6 +192,6 @@
         android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/create_start_time" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
