--- a/app/src/main/res/layout/activity_gantt.xml
+++ b/app/src/main/res/layout/activity_gantt.xml
@@ -12,14 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="100px"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/borderline">
 
         <ImageButton
             android:id="@+id/btn_backToIssueList"
             android:layout_width="100px"
             android:layout_height="100px"
             android:layout_weight="1"
-            app:srcCompat="@drawable/back" />
+            app:srcCompat="@drawable/back"
+            android:background="@drawable/borderline"/>
 
         <TextView
             android:id="@+id/tv_issueName"
@@ -27,7 +29,10 @@
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:text="TextView"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:background="@drawable/borderline"/>
 
         <TextView
             android:id="@+id/tv_nowDate"
@@ -35,7 +40,10 @@
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:text="TextView"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:background="@drawable/borderline"/>
 
     </LinearLayout>
 
@@ -50,13 +58,16 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/stroke"
                 android:layout_width="120dp"
                 android:layout_height="40dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:padding="2dp"
+                android:background="@drawable/borderline">
 
                 <TextView
                     android:id="@+id/textView27"
@@ -86,18 +97,21 @@
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="10">
+            android:layout_weight="150"
+            android:background="@drawable/borderline">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="@drawable/borderline">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:background="@drawable/borderline">
 
                     <TextView
                         android:id="@+id/textView22"
@@ -106,7 +120,8 @@
                         android:layout_weight="1"
                         android:text="一月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView23"
@@ -115,7 +130,8 @@
                         android:layout_weight="1"
                         android:text="二月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView24"
@@ -124,7 +140,8 @@
                         android:layout_weight="1"
                         android:text="三月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView25"
@@ -133,7 +150,8 @@
                         android:layout_weight="1"
                         android:text="四月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView26"
@@ -142,7 +160,8 @@
                         android:layout_weight="1"
                         android:text="五月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView15"
@@ -151,7 +170,8 @@
                         android:layout_weight="1"
                         android:text="六月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView16"
@@ -160,7 +180,8 @@
                         android:layout_weight="1"
                         android:text="七月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView17"
@@ -169,7 +190,8 @@
                         android:layout_weight="1"
                         android:text="八月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView18"
@@ -178,7 +200,8 @@
                         android:layout_weight="1"
                         android:text="九月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView19"
@@ -187,7 +210,8 @@
                         android:layout_weight="1"
                         android:text="十月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView20"
@@ -196,7 +220,8 @@
                         android:layout_weight="1"
                         android:text="十一月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
 
                     <TextView
                         android:id="@+id/textView21"
@@ -205,14 +230,16 @@
                         android:layout_weight="1"
                         android:text="十二月"
                         android:textAlignment="center"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:background="@drawable/borderline"/>
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcv_ganttMonth"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="15" />
+                    android:layout_weight="15"
+                    android:background="@drawable/borderline"/>
 
             </LinearLayout>
         </HorizontalScrollView>
