--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,9 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".main_fragments.SettingsFragment">
 
-    <Button
-        android:id="@+id/btn_logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="登出" />
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="150dp"
+      android:orientation="vertical">
+        <Button
+          android:id="@+id/btn_userFriends"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="朋友" />
+        <Button
+          android:id="@+id/btn_logout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="登出" />
+    </LinearLayout>
 </FrameLayout>
