--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -3,17 +3,24 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".main_fragments.friendFragment">
+  tools:context=".main_fragments.FriendFragment">
 
   <!-- TODO: Update blank fragment layout -->
-  <TextView
-    android:id="@+id/friend_fragment"
+
+  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="@string/hello_blank_fragment" />
-
-  <androidx.recyclerview.widget.RecyclerView
+    android:orientation="vertical">
+    <TextView
+      android:id="@+id/tv_friend_title"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="好友"
+      android:textSize="34sp" />
+    <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/rcy_friends"
       android:layout_width="match_parent"
       android:layout_height="match_parent" />
+  </LinearLayout>
 
 </FrameLayout>
