--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:layout_margin="8dp"
+  app:cardCornerRadius="12dp"
+  android:elevation="4dp"
+  app:cardBackgroundColor="#F8C5C5">
 
-    <TextView
-        android:id="@+id/tv_friend_mail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="email:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_friend_account" />
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+        <TextView
+          android:id="@+id/tv_friend_ID"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="ID:"
+          android:textSize="24sp" />
+        <TextView
+          android:id="@+id/tv_friend_mail"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="email:"
+          android:textSize="24sp" />
+        <TextView
+          android:id="@+id/tv_friend_account"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="帳號:"
+          android:textSize="24sp" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_friend_account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="帳號:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_friend_ID" />
-
-    <TextView
-        android:id="@+id/tv_friend_ID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ID:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
