--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -16,13 +16,14 @@
           android:layout_height="wrap_content"
           android:text="朋友" />
         <Button
+          android:id="@+id/btn_add_friend"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="加好友" />
+        <Button
           android:id="@+id/btn_logout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="登出" />
-    </LinearLayout><![CDATA[
-=======
-
->>>>>>> Stashed changes
-]]>
+    </LinearLayout>
 </FrameLayout>
