--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -13,19 +13,19 @@
       android:layout_height="match_parent"
       android:orientation="vertical">
         <TextView
-          android:id="@+id/tv_friend_ID"
+          android:id="@+id/tv_add_friend_ID"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="ID:"
           android:textSize="24sp" />
         <TextView
-          android:id="@+id/tv_friend_mail"
+          android:id="@+id/tv_add_friend_mail"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="email:"
           android:textSize="24sp" />
         <TextView
-          android:id="@+id/tv_friend_account"
+          android:id="@+id/tv_add_friend_account"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="帳號:"
