--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,8 +8,13 @@
 
     <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="150dp"
+      android:layout_height="266dp"
       android:orientation="vertical">
+        <Button
+          android:id="@+id/btn_excel"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="excel匯出" />
         <Button
           android:id="@+id/btn_userFriends"
           android:layout_width="match_parent"
@@ -25,5 +30,10 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="登出" />
+        <Button
+          android:id="@+id/btn_github"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="gtihub匯出" />
     </LinearLayout>
 </FrameLayout>
