--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -18,7 +18,7 @@
       android:id="@+id/textViewName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="專案名稱"
+      android:text="@string/item_project_title"
       android:textSize="20sp"
       android:textStyle="bold"
       android:textColor="#000000" />
@@ -27,7 +27,7 @@
       android:id="@+id/textViewSummary"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="專案簡介"
+      android:text="@string/item_project_summary"
       android:textSize="16sp"
       android:textColor="#000000"
       android:layout_marginTop="8dp"
